# strip_commemts

./: .gitignore  CMakeLists.txt  build.bat  clean.bat  debug.bat  release.bat  run.bat
src/: array.h  core.h  file_functions.h  main.cpp  map.h  math_functions.h  memory_functions.h  platform.h  platform_windows.cpp  random_functions.h  string_functions.h  utility.cpp  utility.h
tools/debug/: strip_comments.sln
